# Alpha-Trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alpha/app/: cli.py
alpha/backtest/: __init__.py  bt_broker.py  bt_runner.py  bt_strategy.py  metrics.py  vbt_bridge.py
alpha/config/: backtest.yml  data.yml  eval.yml  execution.yml  instruments.yml  levels.yml  liquidity.yml  pipeline.yml  poi.yml  qa.yml  report.yml  scheduler.yml  structure.yml  viz.yml
alpha/core/: data.py  indicators.py  io.py  validate.py
alpha/data/: ingest.py  merge.py  normalize.py  resample.py  validators.py
alpha/eval/: levels_metrics.py
alpha/execution/: engine.py  risk.py  triggers.py
alpha/levels/: break_update.py  detector.py  proportionality.py
alpha/liquidity/: asia.py  eq_clusters.py  sweep.py
alpha/ops/: audit.py  audit_catalog.py  doctor.py  doctor_catalog.py  install.py  notifiers.py  readiness.py  registry.py  reporters.py  run_all.py  (+6 more)
data/: EURUSD_H1.tsv
tests/: test_backtest_bt.py  test_backtest_vbt.py  test_data_ingest.py  test_execution_engine.py  test_indicators.py  test_io.py  test_levels_break.py  test_levels_formation.py  test_levels_metrics.py  test_levels_prop.py  test_liquidity_asia.py  test_liquidity_eq.py  test_liquidity_sweep.py  test_ops_audit.py  test_ops_pipeline.py  test_ops_readiness.py  test_ops_run_all.py  test_ops_scheduler.py  test_poi_ob.py  test_qa_health.py  test_report_html.py  test_structure_events.py  test_structure_quality.py  test_structure_swings.py  test_viz_levels.py  test_viz_poi.py  test_viz_structure.py
(+26 files in other folders)
